--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@langchain/anthropic": "^0.3.11",
     "@langchain/community": "^0.3.22",
     "@langchain/core": "^0.3.27",
+    "@langchain/google-genai": "^0.2.9",
     "@langchain/langgraph": "^0.2.39",
     "@langchain/openai": "^0.3.16",
     "@radix-ui/react-avatar": "^1.1.2",
@@ -27,6 +28,7 @@
     "convex": "^1.17.4",
     "dotenv": "^16.4.7",
     "i": "^0.3.7",
+    "langchain": "^0.3.27",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "npm": "^11.0.0",
