--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.21.0",
     "@clerk/nextjs": "^6.9.6",
+    "@google/generative-ai": "^0.24.1",
     "@langchain/anthropic": "^0.3.11",
     "@langchain/community": "^0.3.22",
     "@langchain/core": "^0.3.27",
